Refactor code structure for improved readability and maintainability

--- a/docker/services/frontend/html/index.html
+++ b/docker/services/frontend/html/index.html
@@ -1411,6 +1411,7 @@
                 <div class="watchdog-panel-links">
                     <a href="/service-watchdog.html" target="_blank">Info</a>
                     <a href="/watchdog/docs" target="_blank">API Docs</a>
+                    <a href="/config-watchdog.html" target="_blank">Config</a>
                 </div>
             </div>
         </div>
