--- a/docker/services/frontend/html/config-watchdog.html
+++ b/docker/services/frontend/html/config-watchdog.html
@@ -553,6 +553,61 @@
             opacity: 0.6;
         }
 
+        /* Compact Services Grid */
+        .services-grid-compact {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+            gap: 0.5rem;
+        }
+
+        .service-item-compact {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            padding: 0.5rem 0.75rem;
+            background: rgba(0, 0, 0, 0.2);
+            border-radius: 6px;
+            font-size: 0.85rem;
+        }
+
+        .service-item-compact .status-dot {
+            width: 8px;
+            height: 8px;
+            border-radius: 50%;
+            flex-shrink: 0;
+        }
+
+        .service-item-compact .status-dot.checking {
+            background: #ffb74d;
+            animation: pulse 1s infinite;
+        }
+
+        .service-item-compact .status-dot.online {
+            background: #81c784;
+            box-shadow: 0 0 6px rgba(129, 199, 132, 0.5);
+        }
+
+        .service-item-compact .status-dot.offline {
+            background: #e57373;
+        }
+
+        .service-item-compact .service-name {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+
+        .service-item-compact .service-port {
+            font-size: 0.7rem;
+            opacity: 0.5;
+            margin-left: auto;
+        }
+
+        @keyframes pulse {
+            0%, 100% { opacity: 1; }
+            50% { opacity: 0.4; }
+        }
+
         /* Quick Actions */
         .quick-actions {
             display: flex;
@@ -1137,7 +1192,10 @@
                 loadTrainingQueue();
                 loadTrainingSchedules();
             }
-            if (tabName === 'monitoring') loadHealthHistory();
+            if (tabName === 'monitoring') {
+                loadMonitoredServices();
+                loadHealthHistory();
+            }
             if (tabName === 'alerts') loadAlertHistory();
         }
 
@@ -1239,6 +1297,64 @@
                 dot.classList.add('unhealthy');
                 item.classList.remove('healthy');
                 item.classList.add('unhealthy');
+            }
+        }
+
+        // Load monitored services for the Monitoring tab
+        async function loadMonitoredServices() {
+            const container = document.getElementById('monitored-services-list');
+
+            const services = [
+                { name: 'Data', port: 3001, key: 'data' },
+                { name: 'NHITS', port: 3002, key: 'nhits' },
+                { name: 'TCN', port: 3003, key: 'tcn' },
+                { name: 'HMM', port: 3004, key: 'hmm' },
+                { name: 'Embedder', port: 3005, key: 'embedder' },
+                { name: 'Candlestick', port: 3006, key: 'candlestick' },
+                { name: 'RAG', port: 3008, key: 'rag' },
+                { name: 'LLM', port: 3009, key: 'llm' },
+                { name: 'Redis', port: 6379, key: 'redis' },
+                { name: 'NHITS-Train', port: 3012, key: 'nhits-train' },
+                { name: 'TCN-Train', port: 3013, key: 'tcn-train' },
+                { name: 'HMM-Train', port: 3014, key: 'hmm-train' },
+                { name: 'Candle-Train', port: 3016, key: 'candlestick-train' }
+            ];
+
+            container.innerHTML = `<div class="services-grid-compact">
+                ${services.map(s => `
+                    <div class="service-item-compact" id="mon-${s.key}" title="${s.name} (Port ${s.port})">
+                        <span class="status-dot checking" id="mon-dot-${s.key}"></span>
+                        <span class="service-name">${s.name}</span>
+                        <span class="service-port">:${s.port}</span>
+                    </div>
+                `).join('')}
+            </div>`;
+
+            // Check each service status
+            for (const s of services) {
+                checkMonitoredServiceHealth(s);
+            }
+        }
+
+        async function checkMonitoredServiceHealth(service) {
+            const dot = document.getElementById(`mon-dot-${service.key}`);
+            if (!dot) return;
+
+            try {
+                const endpoint = service.key === 'redis' ? '/data/health' : `/${service.key}/health`;
+                const controller = new AbortController();
+                const timeoutId = setTimeout(() => controller.abort(), 5000);
+
+                const res = await fetch(endpoint, { signal: controller.signal });
+                clearTimeout(timeoutId);
+
+                if (res.ok) {
+                    dot.className = 'status-dot online';
+                } else {
+                    throw new Error('Not healthy');
+                }
+            } catch (err) {
+                dot.className = 'status-dot offline';
             }
         }
 
@@ -1446,6 +1562,11 @@
 
             try {
                 const res = await fetch(`${API_BASE}/health/history`);
+
+                if (!res.ok) {
+                    throw new Error('API nicht verfügbar');
+                }
+
                 const data = await res.json();
 
                 if (data.history && data.history.length > 0) {
@@ -1463,7 +1584,18 @@
                     container.innerHTML = '<div class="empty-state"><div class="icon">&#128202;</div><div>Keine Historie verfügbar</div></div>';
                 }
             } catch (err) {
-                container.innerHTML = '<div class="empty-state">Fehler beim Laden der Historie</div>';
+                // Fallback: Zeige aktuellen Status statt Historie
+                container.innerHTML = `
+                    <div style="padding: 1rem; background: rgba(0,0,0,0.2); border-radius: 8px;">
+                        <p style="opacity: 0.7; margin-bottom: 1rem;">
+                            Health-Historie API nicht verfügbar. Aktueller Status wird in Echtzeit oben angezeigt.
+                        </p>
+                        <p style="font-size: 0.85rem; opacity: 0.5;">
+                            Die Health-Historie wird im Watchdog Service gespeichert und ist über den Endpoint
+                            <code>/api/v1/health/history</code> abrufbar, sobald implementiert.
+                        </p>
+                    </div>
+                `;
             }
         }
 
